# colla.rs-server

./: .gitignore  Cargo.toml  README.md  config.yaml.example  docker-compose.yml  dockerfile  package.json
public/: index_client.html  index_controller.html
src/: commands.rs  index.ts  main.rs  messages.rs  packets.ts  redis.ts  utils.rs
src/interfaces/: Messages.ts  user.ts
